# camfranka

./: .gitmodules  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  compliant_milling.cpp  control.jl  julia.cpp  register_frame.cpp
julia/: control.jl  optitrack.jl  shape_guesser.jl  spline.jl  spring.jl
lib/: CMakeLists.txt
optitrack/: README.md  optitrack.jl  test.jl
optitrack/Client/: JuliaClient.py  NatNetClient.py  SampleClient.py
scripts/: build.sh  demo1.sh  demo2.sh  demo3.sh  demo4.sh  demo5.sh  joint_id.sh  joytest.sh  lettuce_shaker.sh  robotcontrollerips.sh  setup_cmake.sh
submodules/: CMakeLists.txt
